# rupo

./: .gitignore  Cargo.toml  KEYS.md  LICENSE-APACHE  LICENSE-MIT  MILESTONE_v0.2_SUMMARY.md  PUBLISHING_GUIDE.md  README.md  SECURITY.md  TASK1_SUMMARY.md  TASK2-6_SUMMARY.md  deny.toml  project.yml
.github/workflows/: ci.yml
sifredb/: Cargo.toml  README.md
sifredb-cli/: Cargo.toml  README.md
sifredb-cli/src/: main.rs
sifredb-derive/: Cargo.toml  README.md
sifredb-derive/src/: lib.rs
sifredb-key-file/: Cargo.toml  README.md
sifredb-key-file/src/: lib.rs
sifredb-kms-aws/: Cargo.toml  README.md
sifredb-kms-aws/src/: lib.rs
sifredb/examples/: basic_usage.rs  deterministic_encryption.rs
sifredb/src/: blind_index.rs  context.rs  deterministic.rs  error.rs  header.rs  kdf.rs  key_provider.rs  lib.rs  vault.rs
sifredb/tests/: integration_tests.rs
