[workspace]
members = [
    "sifredb",
    "sifredb-derive",
    "sifredb-cli",
    "sifredb-key-file",
    "sifredb-kms-aws",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["Tunay Engin"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Tuntii/sifredb"

[workspace.dependencies]
# Crypto primitives
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
aes-siv = "0.7"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"

# Security
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.7"
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
