[package]
name = "sifredb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for SifreDB key management"

[[bin]]
name = "sifredb"
path = "src/main.rs"

[dependencies]
sifredb = { path = "../sifredb" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
