[package]
name = "sifredb-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for sifredb"
keywords = ["encryption", "derive", "macro"]
categories = ["cryptography", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
