[package]
name = "sifredb-key-file"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "File-based key provider for SifreDB"
keywords = ["encryption", "key-management", "security"]
categories = ["cryptography"]

[dependencies]
sifredb = { version = "0.1.1", path = "../sifredb" }
secrecy.workspace = true
zeroize.workspace = true
chacha20poly1305.workspace = true
rand = "0.8"
