[package]
name = "sifredb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Field-level encryption library with envelope encryption and blind indexes"
keywords = ["encryption", "database", "security", "kms"]
categories = ["cryptography", "database"]

[dependencies]
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
hmac.workspace = true
secrecy.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.4"
hex = "0.4"
sifredb-key-file = { path = "../sifredb-key-file" }
tempfile = "3.8"

[features]
default = []
